ChangeLog

Upcoming version
[TASK]    Exclude all parameters (including filters) from cHash calculation, thanks to Uwe Hawkeye1909, https://github.com/tpwd/ke_search/issues/187

Version 5.0.4, 15 September 2023
[TASK]    Exclude ke_search parameters from cacheHash validation, thanks to Andreas Mühe and schlotzz, https://github.com/tpwd/ke_search/issues/149
[BUGFIX]  Avoid undefined array key in indexer runner, thanks to ecosmox36. https://github.com/tpwd/ke_search/issues/160
[TASK]    Prevent indexing when file metadata is missing, thanks to Moritz Ngo, https://github.com/tpwd/ke_search/pull/182
[TASK]    Handle deprecation warnings with TYPO3 v12, thanks to Markus Volkmer, https://github.com/tpwd/ke_search/pull/186
[BUGFIX]  Avoid undefined array key "resultChars", thanks to Stephan Bauer, https://github.com/tpwd/ke_search/pull/185

Version 5.0.3, 18 August 2023
[BUGFIX]  Show dashboard widgets in TYPO3 12, thanks to Torben Hansen, https://github.com/tpwd/ke_search/issues/170
[BUGFIX]  Avoid undefined array key warning in doc, pdf and xls file indexers, thanks to Andreas Kessel, https://github.com/tpwd/ke_search/issues/171
[BUGFIX]  Don't use LocalizationUtility in scheduled command, thanks to kd-bin, https://github.com/tpwd/ke_search/issues/169

Version 5.0.2, 13 June 2023
[BUGFIX]  Security Bugfix. Please update!

Version 5.0.1, 2 June 2023
[BUGFIX]  Fix undefined array key issues, cherry-pick fix from https://github.com/tpwd/ke_search/commit/5a9ce7063ce89c4de249e720a91490930a885edf
[BUGFIX]  Fix regression caused by "mixed" type hint which is not available for PHP 7.4, see https://github.com/tpwd/ke_search/issues/166

Version 5.0.0, 26 May 2023
[!!!]     This version supports TYPO3 12 and 11 and drops support for TYPO3 10.
[!!!]     If you use a custom template for "SearchForm.html" please replace "{f:uri.page(pageUid: targetpage)}" with "{targetPageUrl}".
[TASK]    Mark extension as compatible with TYPO3 12 and drop support for TYPO3 10